# NeuroSuite

./: .gitignore  README.md  demo.ipynb  main.py  pyproject.toml
neurosuite/: __init__.py  datasets.py  domain.py  features.py  interpretation.py  modeling.py  pipeline.py  preprocessing.py  selection.py  visualization.py
neurosuite/ui/: app.py
